# learn

./: .gitignore  README.md  ROADMAP.md
cloudflare-workers/: README.md
git/with/w3schools/: note1.md
git/with/w3schools.com/: README.md  fork.md  gitingore.md  note1.md  ssh-key-olusturmak.md
github/workflows/workflows/: test.yml
javascript/: README.md
javascript/with/harran-university/: README.md
javascript/with/quizes/: js-quizes.js
math/: README.md
math/with/python/: factorial.py  gauss.py  getter.py  packages.txt
nextjs/: README.md
nodejs/: README.md
nodejs/with/homeworks/: VEYSEL-YAVUZ.html  islemler-ev-odevi-AHMETCAN-IŞIK.js
nodejs/with/practice/: test-objects.js
python/with/cs50p/: average.py  calculate-square.py  calculator.py  cat.py  compare.py  generate.py  grade.py  hello.py  hogwarts.py  house.py  itunes.py  mario.py  name.py  notes.md  number.py  parity.py  recommendation.py  say.py  sayings.py
python/with/practice/: catch-keys.py  (+17 more)
python/with/projects/catch-movie/: ROADMAP.md  pyproject.toml
python/with/projects/catch-movie/src/: main.py
python/with/projects/fouri/: README.md  pyproject.toml
python/with/projects/fouri/src/fouri/: __init__.py  __main__.py  ai.py  find.py  repo.py  tweet.py
python/with/projects/fouri/src/fouri/commands/: __init__.py  help.py  version.py
python/with/projects/fouri/src/fouric/: __init__.py  __main__.py  builder.py  commands.py  install.py  reinstall.py  run.py  uninstall.py  upload.py
python/with/projects/fouri/src/scripts/: __main__.py  commands.py  reinstall.py  run.py
rust/with/projects/guessing/: Cargo.toml
rust/with/projects/guessing/src/: game.rs  lib.rs
shell/: README.md
sql/: README.md
tauri/: README.md
wtk/: README.md
wtk/etkilesimli-web-arayuzu-gelistirme/: README.md
wtk/web-yayinciligi/: odev.rar
(+322 files in other folders)
