[project]
name = "catch-movie"
version = "0.1.0"
authors = [
  { name="ahmetcanisik", email="imcanisik@gmail.com" },
]
description = ""
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://ahmetcanisik.com/catch-movie"
Issues = "https://github.com/ahmetcanisik/catch-movie/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"