[package]
name = "guessing"
description = "Guess the secret number and you win!"
homepage = "https://api.canisik.me/p/guessing/?viewOnWeb=true"
repository = "https://github.com/ahmetcanisik/learn/tree/main/rust/with/projects/guessing"
keywords = ["guess", "guessing_game", "guessing", "game", "terminal_game"]
categories = ["games"]
readme = "README.md"
license = "MIT"
version = "0.1.1"
edition = "2021"

[dependencies]
rand = "0.8.5"
